Release Version 1.62 ( correct about and skills text alignment and background at 1000px)

--- a/static/css/static.css
+++ b/static/css/static.css
@@ -132,8 +132,6 @@ text-area.form-control:focus {
 
 #skills-content {
     width: 50vw;
-    margin-right: auto;
-    margin-left: auto;
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
 
@@ -144,7 +142,6 @@ font-weight: 500;
 }
 
 .list-group {
-    width: 70vw;
     margin: auto;
     padding-top: 3rem !important;
 }
@@ -264,6 +261,25 @@ hr {
 
 /* MEDIA RULES */
 
+@media (max-width: 1000px) {
+    #about-content {
+        width:80% !important;
+        height: 100% !important;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        background: linear-gradient(90deg, #FFFFFF 80%, #FFFFFFCC 90%, #FFFFFF00) !important;
+    }
+
+    #skills-content {
+        width:90% !important;
+        height: 100% !important;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        background: linear-gradient(90deg, #FFFFFF00 5%, #FFFFFFCC 15%, #FFFFFF) !important;
+    }
+
+}
+
 @media (max-width: 770px) {
     .splash {
     margin-left: auto;
@@ -284,7 +300,6 @@ hr {
     }
 
     #about-content {
-        margin-left: 0 !important;
         padding-left: 2rem !important;
         padding-right: 2rem !important;
 
@@ -293,6 +308,7 @@ hr {
     #about-content, #skills-content, #contact-page {
         width:100% !important;
         height: 100% !important;
+        background: none !important;
         background-color: #FFFFFFDD !important;
         padding: 0 20px;
         }
